--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;" lang="en"><head>
+<html style="font-size: 16px;" lang="en"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="">
@@ -39,21 +40,36 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-spacing-30 u-unstyled u-nav-1" data-animation-name="customAnimationIn" data-animation-duration="1000"><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" href="../../../../../../../Downloads" style="padding: 10px 0px;">Home</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" href="Estates.html" style="padding: 10px 0px;">Estates</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" href="Contact.html" style="padding: 10px 0px;">Contact</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" style="padding: 10px 0px;">Login</a>
-</li></ul>
+              <ul class="u-nav u-spacing-30 u-unstyled u-nav-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
+                  <li sec:authorize="hasRole('ROLE_OWNER')" class="u-nav-item">
+                      <a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" href="/applications/registration/new" style="padding: 10px 0px;">
+                          New Registration
+                      </a>
+                  </li>
+
+                  <li class="u-nav-item">
+                      <a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" href="/" style="padding: 10px 0px;">
+                          Home
+                      </a>
+                  </li>
+
+                  <li class="u-nav-item">
+                      <a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" style="padding: 10px 0px;" href="/login">
+                          Login
+                      </a>
+                  </li>
+                  <li class="u-nav-item">
+                      <a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" style="padding: 10px 0px;" href="/register">
+                          Register
+                      </a>
+                  </li>
+              </ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="../../../../../../../Downloads" style="padding-top: 38px; padding-bottom: 38px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Estates.html" style="padding-top: 38px; padding-bottom: 38px;">Estates</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html" style="padding-top: 38px; padding-bottom: 38px;">Contact</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" style="padding-top: 38px; padding-bottom: 38px;">Login</a>
-</li></ul>
+
               </div>
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
@@ -90,17 +106,16 @@
             <h3 class="u-custom-font u-font-montserrat u-text u-text-default u-text-1">Welcome Back</h3>
             <div class="u-form u-login-control u-white u-form-1">
               <form th:action="@{/login}" class="u-clearfix u-form-custom-backend u-form-spacing-20 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 30px;" method="post">
+                  <div th:if="${param.error}">
+                      Invalid username and password.
+                  </div>
                 <div class="u-form-group u-form-name">
                   <label for="username" class="u-label">Username *</label>
                   <input type="text"  placeholder="Enter your Username" id="username" name="username" class="u-grey-5 u-input u-input-rectangle u-input-1" required="">
                 </div>
-                <div class="u-form-group u-form-password">
+                  <div class="u-form-group u-form-password">
                   <label for="password" class="u-label">Password *</label>
                   <input type="password" placeholder="Enter your Password" id="password" name="password" class="u-grey-5 u-input u-input-rectangle u-input-2" required="">
-                </div>
-                <div class="u-form-checkbox u-form-group">
-                  <input type="checkbox" id="checkbox-a30d" name="remember" value="On" class="u-field-input">
-                  <label for="checkbox-a30d" class="u-field-label" style="">Remember me</label>
                 </div>
                 <div class="u-align-right u-form-group u-form-submit">
                     <button type="submit" class="u-border-none u-btn u-btn-submit u-button-style u-palette-1-light-1 u-btn-1">Login</button>
@@ -109,7 +124,7 @@
                 <input type="hidden" value="" name="recaptchaResponse">
               </form>
             </div>
-            <a href="#" class="u-border-active-palette-2-base u-border-hover-palette-1-base u-border-none u-btn u-button-style u-login-control u-login-create-account u-none u-text-grey-40 u-text-hover-palette-4-base u-btn-2">Don't have an account?</a>
+            <a href="/register" class="u-border-active-palette-2-base u-border-hover-palette-1-base u-border-none u-btn u-button-style u-login-control u-login-create-account u-none u-text-grey-40 u-text-hover-palette-4-base u-btn-2">Don't have an account?</a>
           </div>
         </div>
       </div>
