--- a/src/main/resources/templates/Thank-you-page.html
+++ b/src/main/resources/templates/Thank-you-page.html
@@ -1,97 +1,118 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;" lang="en"><head>
+<html style="font-size: 16px;" lang="en"
+      xmlns:sec="http://www.w3.org/1999/xhtml"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
     <title>Thank you page</title>
     <link rel="stylesheet" th:href="@{/css/nicepage.css}" media="screen">
-<link rel="stylesheet" th:href="@{/css/Thank-you-page.css}" media="screen">
+    <link rel="stylesheet" th:href="@{/css/Thank-you-page.css}" media="screen">
     <script class="u-script" type="text/javascript" th:src="@{/js/jquery.js}" defer=""></script>
     <script class="u-script" type="text/javascript" th:src="@{/js/nicepage.js}" defer=""></script>
     <meta name="generator" content="Nicepage 7.2.3, nicepage.com">
-    
-    
-    
+
+
+
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <script type="application/ld+json">{
-		"@context": "http://schema.org",
-		"@type": "Organization",
-		"name": "",
-		"logo": "images/black-logo-8_150.png",
-		"sameAs": []
-}</script>
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "",
+        "logo": "images/black-logo-8_150.png",
+        "sameAs": []
+    }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Thank you page">
     <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-c3ce"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="#" class="u-image u-logo u-image-1" data-image-width="133" data-image-height="135">
-          <img th:src="@{images/black-logo-8_150.png}" class="u-logo-image u-logo-image-1">
-        </a>
-        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0">
-          <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
+    <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+<body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-c3ce"><div class="u-clearfix u-sheet u-sheet-1">
+    <a href="#" class="u-image u-logo u-image-1" data-image-width="133" data-image-height="135">
+        <img th:src="@{/images/black-logo-8_150.png}" class="u-logo-image u-logo-image-1">
+    </a>
+    <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0">
+        <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
             <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-color u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-flip-vertical u-hamburger-link u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-hamburger-link-1" href="#">
-              <svg class="u-svg-link" viewBox="0 0 24 24"><use xlink:href="#menu-hamburger"></use></svg>
-              <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
-</g></svg>
+                <svg class="u-svg-link" viewBox="0 0 24 24"><use xlink:href="#menu-hamburger"></use></svg>
+                <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
+                </g></svg>
             </a>
-          </div>
-          <div class="u-custom-menu u-nav-container">
+        </div>
+        <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-spacing-30 u-unstyled u-nav-1" data-animation-name="customAnimationIn" data-animation-duration="1000"><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" href="../../../../../../../Downloads" style="padding: 10px 0px;">Home</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" href="Estates.html" style="padding: 10px 0px;">Estates</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" href="Contact.html" style="padding: 10px 0px;">Contact</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" style="padding: 10px 0px;">Login</a>
-</li></ul>
-          </div>
-          <div class="u-custom-menu u-nav-container-collapse">
+            </li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" href="Estates.html" style="padding: 10px 0px;">Estates</a>
+            </li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" href="Contact.html" style="padding: 10px 0px;">Contact</a>
+            </li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" style="padding: 10px 0px;">Login</a>
+            </li></ul>
+        </div>
+        <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-              <div class="u-inner-container-layout u-sidenav-overflow">
-                <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="../../../../../../../Downloads" style="padding-top: 38px; padding-bottom: 38px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Estates.html" style="padding-top: 38px; padding-bottom: 38px;">Estates</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html" style="padding-top: 38px; padding-bottom: 38px;">Contact</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" style="padding-top: 38px; padding-bottom: 38px;">Login</a>
-</li></ul>
-              </div>
+                <div class="u-inner-container-layout u-sidenav-overflow">
+                    <div class="u-menu-close"></div>
+                    <ul class="u-nav u-spacing-30 u-unstyled u-nav-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
+                        <li sec:authorize="hasRole('ROLE_OWNER')" class="u-nav-item">
+                            <a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" href="/applications/registration/new" style="padding: 10px 0px;">
+                                New Registration
+                            </a>
+                        </li>
+
+                        <li class="u-nav-item">
+                            <a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" href="/" style="padding: 10px 0px;">
+                                Home
+                            </a>
+                        </li>
+
+
+                        <li class="u-nav-item">
+                            <a sec:authorize="!isAuthenticated()" class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" style="padding: 10px 0px;" href="/login">
+                                Login
+                            </a>
+                        </li>
+                        <li class="u-nav-item">
+                            <a sec:authorize="!isAuthenticated()" class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" style="padding: 10px 0px;" href="/register">
+                                Register
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
-          </div>
-          <style class="menu-style">@media (max-width: 939px) {
-                    [data-responsive-from="MD"] .u-nav-container {
-                        display: none;
-                    }
-                    [data-responsive-from="MD"] .menu-collapse {
-                        display: block;
-                    }
-                }</style>
-        </nav>
-      </div></header>
-    <section class="u-clearfix u-section-1" id="sec-cad5">
-      <div class="u-clearfix u-sheet u-sheet-1">
+        </div>
+        <style class="menu-style">@media (max-width: 939px) {
+            [data-responsive-from="MD"] .u-nav-container {
+                display: none;
+            }
+            [data-responsive-from="MD"] .menu-collapse {
+                display: block;
+            }
+        }</style>
+    </nav>
+</div></header>
+<section class="u-clearfix u-section-1" id="sec-cad5">
+    <div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-text u-text-default u-text-1">Thank you</p>
         <img class="u-image u-image-circle u-opacity u-opacity-80 u-image-1" th:src="@{images/a36a9eaab30ef349d0b308b9b690f0b22d1a7706760bb4b6f235272499ccd15d297cf594501642bfc4c2614fa6b06b21e15e7b87dee0a9c2de7bad_1280.jpg}" alt="" data-image-width="960" data-image-height="1280">
         <p class="u-text u-text-default u-text-2">for choosing us!</p>
-      </div>
-    </section>
-    
-    
-    
-    <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-80" id="sec-b81f"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="#" class="u-image u-logo u-image-1" data-image-width="133" data-image-height="135">
-          <img th:src="@{images/black-logo-8_150.png}" class="u-logo-image u-logo-image-1">
-        </a>
-        <p class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1"> © 2025 Company. All Rights Reserved.<br>Licensed Real Estate Broker
-        </p>
-        <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
-          <a class="u-social-url" title="facebook" target="_blank" href="">
+    </div>
+</section>
+
+
+
+<footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-80" id="sec-b81f"><div class="u-clearfix u-sheet u-sheet-1">
+    <a href="#" class="u-image u-logo u-image-1" data-image-width="133" data-image-height="135">
+        <img th:src="@{images/black-logo-8_150.png}" class="u-logo-image u-logo-image-1">
+    </a>
+    <p class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1"> © 2025 Company. All Rights Reserved.<br>Licensed Real Estate Broker
+    </p>
+    <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
+        <a class="u-social-url" title="facebook" target="_blank" href="">
             <span class="u-icon u-social-facebook u-social-icon u-icon-1">
               <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-e163"></use></svg>
               <svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-e163"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
       c0-6.7,3.1-17,17-17h12.5v13.9H73.5z"></path></svg>
             </span>
-          </a>
-          <a class="u-social-url" title="twitter" target="_blank" href="">
+        </a>
+        <a class="u-social-url" title="twitter" target="_blank" href="">
             <span class="u-icon u-social-icon u-social-twitter u-icon-2">
               <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-8241"></use></svg>
               <svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-8241"><circle fill="currentColor" class="st0" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M83.8,47.3c0,0.6,0,1.2,0,1.7c0,17.7-13.5,38.2-38.2,38.2C38,87.2,31,85,25,81.2c1,0.1,2.1,0.2,3.2,0.2
@@ -100,8 +121,8 @@
       c-0.2-1-0.3-2-0.3-3.1c0-7.4,6-13.4,13.4-13.4c3.9,0,7.3,1.6,9.8,4.2c3.1-0.6,5.9-1.7,8.5-3.3c-1,3.1-3.1,5.8-5.9,7.4
       c2.7-0.3,5.3-1,7.7-2.1C88.7,43,86.4,45.4,83.8,47.3z"></path></svg>
             </span>
-          </a>
-          <a class="u-social-url" title="instagram" target="_blank" href="">
+        </a>
+        <a class="u-social-url" title="instagram" target="_blank" href="">
             <span class="u-icon u-social-icon u-social-instagram u-icon-3">
               <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-79ff"></use></svg>
               <svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-79ff"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M55.9,38.2c-9.9,0-17.9,8-17.9,17.9C38,66,46,74,55.9,74c9.9,0,17.9-8,17.9-17.9C73.8,46.2,65.8,38.2,55.9,38.2
@@ -109,24 +130,24 @@
       C90.6,29.1,82.7,21.3,73.1,21.3z M83,73.3c0,5.5-4.5,9.9-9.9,9.9H38.6c-5.5,0-9.9-4.5-9.9-9.9V38.8c0-5.5,4.5-9.9,9.9-9.9h34.5
       c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg>
             </span>
-          </a>
-          <a class="u-social-url" title="linkedin" target="_blank" href="">
+        </a>
+        <a class="u-social-url" title="linkedin" target="_blank" href="">
             <span class="u-icon u-social-icon u-social-linkedin u-icon-4">
               <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-d92f"></use></svg>
               <svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-d92f"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M41.3,83.7H27.9V43.4h13.4V83.7z M34.6,37.9L34.6,37.9c-4.6,0-7.5-3.1-7.5-7c0-4,3-7,7.6-7s7.4,3,7.5,7
       C42.2,34.8,39.2,37.9,34.6,37.9z M89.6,83.7H76.2V62.2c0-5.4-1.9-9.1-6.8-9.1c-3.7,0-5.9,2.5-6.9,4.9c-0.4,0.9-0.4,2.1-0.4,3.3v22.5
       H48.7c0,0,0.2-36.5,0-40.3h13.4v5.7c1.8-2.7,5-6.7,12.1-6.7c8.8,0,15.4,5.8,15.4,18.1V83.7z"></path></svg>
             </span>
-          </a>
-        </div>
-      </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <p class="u-text">
+        </a>
+    </div>
+</div></footer>
+<section class="u-backlink u-clearfix u-grey-80">
+    <p class="u-text">
         <span>This site was created with the </span>
         <a class="u-link" href="https://nicepage.com/" target="_blank" rel="nofollow">
-          <span>Nicepage</span>
+            <span>Nicepage</span>
         </a>
-      </p>
-    </section>
-  
+    </p>
+</section>
+
 </body></html>
