--- a/src/main/resources/templates/error/error-404.html
+++ b/src/main/resources/templates/error/error-404.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="en"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6"><head>
+      xmlns:sec="http://www.w3.org/1999/xhtml"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Internal Server Error, Page Not Found, Check URL Address, Session Expired, What our customers say, Doing The Right Things, Page Not Found, Access Denied, Our Team, Our Customers">
     <meta name="description" content="">
-    <title>Register</title>
+    <title>Page 1</title>
     <link rel="stylesheet" th:href="@{/css/nicepage.css}" media="screen">
-    <link rel="stylesheet" th:href="@{/css/Register.css}" media="screen">
+    <link rel="stylesheet" th:href="@{/css/errorPage.css}" media="screen">
     <script class="u-script" type="text/javascript" th:src="@{/js/jquery.js}" defer=""></script>
     <script class="u-script" type="text/javascript" th:src="@{/js/nicepage.js}" defer=""></script>
-    <meta name="generator" content="Nicepage 7.2.3, nicepage.com">
+    <meta name="generator" content="Nicepage 7.3.1, nicepage.com">
 
 
 
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     <script type="application/ld+json">{
         "@context": "http://schema.org",
         "@type": "Organization",
@@ -24,7 +23,7 @@
         "sameAs": []
     }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Register">
+    <meta property="og:title" content="Page 1">
     <meta property="og:type" content="website">
     <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
 <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-c3ce"><div class="u-clearfix u-sheet u-sheet-1">
@@ -52,15 +51,23 @@
                         Home
                     </a>
                 </li>
-
-
                 <li class="u-nav-item">
-                    <a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" style="padding: 10px 0px;" href="/login">
+                    <a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" th:href="@{/estate/{ownerId}(ownerId=${ownerId})}" style="padding: 10px 0px;">
+                        Estates
+                    </a>
+                </li>
+                <li class="u-nav-item">
+                    <a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" href="Contact.html" style="padding: 10px 0px;">
+                        Contact
+                    </a>
+                </li>
+                <li class="u-nav-item">
+                    <a sec:authorize="!isAuthenticated()" class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" style="padding: 10px 0px;" href="/login">
                         Login
                     </a>
                 </li>
                 <li class="u-nav-item">
-                    <a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" style="padding: 10px 0px;" href="/register">
+                    <a sec:authorize="!isAuthenticated()" class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" style="padding: 10px 0px;" href="/register">
                         Register
                     </a>
                 </li>
@@ -71,8 +78,8 @@
                 <div class="u-inner-container-layout u-sidenav-overflow">
                     <div class="u-menu-close"></div>
                     <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="./" style="padding-top: 38px; padding-bottom: 38px;">Home</a>
-                    </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Estates.html" style="padding-top: 38px; padding-bottom: 38px;">Estates</a>
-                    </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html" style="padding-top: 38px; padding-bottom: 38px;">Contact</a>
+                    </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#" style="padding-top: 38px; padding-bottom: 38px;">Estates</a>
+                    </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#" style="padding-top: 38px; padding-bottom: 38px;">Contact</a>
                     </li><li class="u-nav-item"><a class="u-button-style u-nav-link" style="padding-top: 38px; padding-bottom: 38px;">Login</a>
                     </li></ul>
                 </div>
@@ -89,46 +96,12 @@
         }</style>
     </nav>
 </div></header>
-<section class="u-clearfix u-image u-section-1" id="sec-3692">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <div class="u-align-center u-container-align-center u-container-style u-group u-radius-50 u-shape-round u-white u-group-1">
-            <div class="u-container-layout u-container-layout-1">
-            <span class="u-file-icon u-icon u-icon-circle u-palette-1-light-1 u-text-white u-icon-1">
-              <img th:src="@{/images/149307-c98f5202.png}" alt="">
-            </span>
-                <h3 class="u-custom-font u-font-montserrat u-text u-text-default u-text-1">Join Us</h3>
-                <div class="u-form u-login-control u-radius u-white u-form-1">
-                    <form action="#" th:action="@{/register}" th:object="${user}" class="u-clearfix u-form-custom-backend u-form-spacing-20 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 30px;" method="post">
-                        <div class="u-form-group u-form-name">
-                            <label for="username-a30d" class="u-label">Username *</label>
-                            <input type="text" th:field="*{username}" placeholder="Enter your Username" id="username-a30d" name="username" class="u-grey-5 u-input u-input-rectangle u-radius u-input-1" required="">
-                        </div>
-                        <div class="u-form-group u-form-group-2">
-                            <label for="text-2086" class="u-label">Email *</label>
-                            <input type="text" th:field="*{email}" id="text-2086" name="text" class="u-grey-5 u-input u-input-rectangle u-radius u-input-2" required="required" placeholder="Enter your Email">
-                        </div>
-                        <div class="u-form-group u-form-password">
-                            <label for="password-a30d" class="u-label">Password *</label>
-                            <input type="password" th:field="*{password}" placeholder="Enter your Password" id="password-a30d" name="password" class="u-grey-5 u-input u-input-rectangle u-radius u-input-3" required="">
-                        </div>
-                        <div class="u-form-checkbox u-form-group">
-                            <input type="checkbox" id="checkbox-a30d" name="roleName" class="u-field-input" value="ROLE_TENANT">
-                            <label for="checkbox-a30d" class="u-field-label" style="">Do you want a tenant Role?</label>
-                        </div>
-                        <div class="u-form-checkbox u-form-group u-form-group-5">
-                            <input type="checkbox" id="checkbox-dabc" name="roleName" class="u-field-input" value="ROLE_OWNER">
-                            <label for="checkbox-dabc" class="u-field-label">Do you want a owner Role?</label>
-                        </div>
-                        <div class="u-align-right u-form-group u-form-submit">
-                            <button type="submit"  class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-palette-1-light-1 u-radius u-btn-1">Register</button>
-                            <input type="submit" value="submit" class="u-form-control-hidden">
-                        </div>
-                        <input type="hidden" value="" name="recaptchaResponse">
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+<section class="u-clearfix u-container-align-center u-valign-top-lg u-valign-top-sm u-valign-top-xl u-valign-top-xs u-section-1" id="sec-b5d9">
+    <div class="u-expanded-width u-grey-5 u-shape u-shape-rectangle u-shape-1"></div>
+    <img class="u-image u-image-default u-image-1" alt="" th:src="@{/images/photo-1640950253943-2281b37b8589.jpeg}">
+    <h1 class="u-align-center u-text u-text-1">Server Couldn't Find the Requested Page</h1>
+    </h1>
+    <p class="u-align-center u-text u-text-2">Error! The requested property details could not be retrieved. Please check back shortly.</p>
 </section>
 
 
@@ -141,38 +114,26 @@
     </p>
     <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
         <a class="u-social-url" title="facebook" target="_blank" href="">
-            <span class="u-icon u-social-facebook u-social-icon u-icon-1">
-              <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-e163"></use></svg>
-              <svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-e163"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
-      c0-6.7,3.1-17,17-17h12.5v13.9H73.5z"></path></svg>
-            </span>
+            <span class="u-icon u-social-facebook u-social-icon u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-e163"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-e163"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
+      c0-6.7,3.1-17,17-17h12.5v13.9H73.5z"></path></svg></span>
         </a>
         <a class="u-social-url" title="twitter" target="_blank" href="">
-            <span class="u-icon u-social-icon u-social-twitter u-icon-2">
-              <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-8241"></use></svg>
-              <svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-8241"><circle fill="currentColor" class="st0" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M83.8,47.3c0,0.6,0,1.2,0,1.7c0,17.7-13.5,38.2-38.2,38.2C38,87.2,31,85,25,81.2c1,0.1,2.1,0.2,3.2,0.2
+            <span class="u-icon u-social-icon u-social-twitter u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-8241"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-8241"><circle fill="currentColor" class="st0" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M83.8,47.3c0,0.6,0,1.2,0,1.7c0,17.7-13.5,38.2-38.2,38.2C38,87.2,31,85,25,81.2c1,0.1,2.1,0.2,3.2,0.2
       c6.3,0,12.1-2.1,16.7-5.7c-5.9-0.1-10.8-4-12.5-9.3c0.8,0.2,1.7,0.2,2.5,0.2c1.2,0,2.4-0.2,3.5-0.5c-6.1-1.2-10.8-6.7-10.8-13.1
       c0-0.1,0-0.1,0-0.2c1.8,1,3.9,1.6,6.1,1.7c-3.6-2.4-6-6.5-6-11.2c0-2.5,0.7-4.8,1.8-6.7c6.6,8.1,16.5,13.5,27.6,14
       c-0.2-1-0.3-2-0.3-3.1c0-7.4,6-13.4,13.4-13.4c3.9,0,7.3,1.6,9.8,4.2c3.1-0.6,5.9-1.7,8.5-3.3c-1,3.1-3.1,5.8-5.9,7.4
-      c2.7-0.3,5.3-1,7.7-2.1C88.7,43,86.4,45.4,83.8,47.3z"></path></svg>
-            </span>
+      c2.7-0.3,5.3-1,7.7-2.1C88.7,43,86.4,45.4,83.8,47.3z"></path></svg></span>
         </a>
         <a class="u-social-url" title="instagram" target="_blank" href="">
-            <span class="u-icon u-social-icon u-social-instagram u-icon-3">
-              <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-79ff"></use></svg>
-              <svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-79ff"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M55.9,38.2c-9.9,0-17.9,8-17.9,17.9C38,66,46,74,55.9,74c9.9,0,17.9-8,17.9-17.9C73.8,46.2,65.8,38.2,55.9,38.2
+            <span class="u-icon u-social-icon u-social-instagram u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-79ff"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-79ff"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M55.9,38.2c-9.9,0-17.9,8-17.9,17.9C38,66,46,74,55.9,74c9.9,0,17.9-8,17.9-17.9C73.8,46.2,65.8,38.2,55.9,38.2
       z M55.9,66.4c-5.7,0-10.3-4.6-10.3-10.3c-0.1-5.7,4.6-10.3,10.3-10.3c5.7,0,10.3,4.6,10.3,10.3C66.2,61.8,61.6,66.4,55.9,66.4z"></path><path fill="#FFFFFF" d="M74.3,33.5c-2.3,0-4.2,1.9-4.2,4.2s1.9,4.2,4.2,4.2s4.2-1.9,4.2-4.2S76.6,33.5,74.3,33.5z"></path><path fill="#FFFFFF" d="M73.1,21.3H38.6c-9.7,0-17.5,7.9-17.5,17.5v34.5c0,9.7,7.9,17.6,17.5,17.6h34.5c9.7,0,17.5-7.9,17.5-17.5V38.8
       C90.6,29.1,82.7,21.3,73.1,21.3z M83,73.3c0,5.5-4.5,9.9-9.9,9.9H38.6c-5.5,0-9.9-4.5-9.9-9.9V38.8c0-5.5,4.5-9.9,9.9-9.9h34.5
-      c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg>
-            </span>
+      c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
         </a>
         <a class="u-social-url" title="linkedin" target="_blank" href="">
-            <span class="u-icon u-social-icon u-social-linkedin u-icon-4">
-              <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-d92f"></use></svg>
-              <svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-d92f"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M41.3,83.7H27.9V43.4h13.4V83.7z M34.6,37.9L34.6,37.9c-4.6,0-7.5-3.1-7.5-7c0-4,3-7,7.6-7s7.4,3,7.5,7
+            <span class="u-icon u-social-icon u-social-linkedin u-icon-4"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-d92f"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-d92f"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M41.3,83.7H27.9V43.4h13.4V83.7z M34.6,37.9L34.6,37.9c-4.6,0-7.5-3.1-7.5-7c0-4,3-7,7.6-7s7.4,3,7.5,7
       C42.2,34.8,39.2,37.9,34.6,37.9z M89.6,83.7H76.2V62.2c0-5.4-1.9-9.1-6.8-9.1c-3.7,0-5.9,2.5-6.9,4.9c-0.4,0.9-0.4,2.1-0.4,3.3v22.5
-      H48.7c0,0,0.2-36.5,0-40.3h13.4v5.7c1.8-2.7,5-6.7,12.1-6.7c8.8,0,15.4,5.8,15.4,18.1V83.7z"></path></svg>
-            </span>
+      H48.7c0,0,0.2-36.5,0-40.3h13.4v5.7c1.8-2.7,5-6.7,12.1-6.7c8.8,0,15.4,5.8,15.4,18.1V83.7z"></path></svg></span>
         </a>
     </div>
 </div></footer>
