--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,9 +61,9 @@
                         Estates
                     </a>
                 </li>
-                <li class="u-nav-item">
-                    <a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" href="Contact.html" style="padding: 10px 0px;">
-                        Contact
+                <li sec:authorize="hasRole('ROLE_ADMIN')" class="u-nav-item">
+                    <a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" th:href="@{/applications/registrations}" style="padding: 10px 0px;">
+                        Registrations
                     </a>
                 </li>
                 <li class="u-nav-item">
