--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -70,6 +70,11 @@
                     <a sec:authorize="!isAuthenticated()" class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" style="padding: 10px 0px;" href="/login">
                         Login
                     </a>
+                    <a sec:authorize="!isAuthenticated()" class="u-button-style u-nav-link" style="padding-top: 38px; padding-bottom: 38px;">
+                        <form th:action="@{/logout}" method="post">
+                            <button type="submit" class="btn btn-primary">Sign Out</button>
+                        </form>
+                    </a>
                 </li>
                 <li class="u-nav-item">
                     <a sec:authorize="!isAuthenticated()" class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-1-base" style="padding: 10px 0px;" href="/register">
